--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -54,4 +54,5 @@
     <string name="login_failed">"Login failed"</string>
     <string name="title_activity_main2">Main2Activity</string>
     <string name="pick_image_intent" />
+    <string name="fill_form">Fill Form</string>
 </resources>
