--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -55,4 +55,5 @@
     <string name="title_activity_main2">Main2Activity</string>
     <string name="pick_image_intent" />
     <string name="fill_form">Fill Form</string>
+    <string name="label">Company:</string>
 </resources>
